<resources>
    <string name="app_name">EasySocial</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="edittext_email_hint">EasySocial Email here</string>
    <string name="edittext_password_hint">password here</string>
    <string name="login">登录</string>

    <string name="home">首页</string>
    <string name="person_center">个人中心</string>
    <string name="setting">设置</string>
    <string name="tweet">推文</string>
    <string name="favorite">赞</string>
    <string name="avatar">头像</string>
    <string name="comment">评论</string>
    <string name="nickname">昵称</string>

    <string name="form_camera">相机拍照</string>
    <string name="form_album">相册选取</string>


    <string name="long_text">#TaylorSwift##泰勒斯威夫特#  “Everybody has that point in their life where you hit a crossroads and you’ve had a bunch of bad days and there’s different ways you can deal with it and the way I dealt with it was I just turned completely to music.”</string>
    <string name="reply_edit_hint">说些什么~</string>
    <string name="reply">回复</string>
    <string name="send">发送</string>
    <string name="logout">退   出</string>
    <string name="gender">性别</string>
    <string name="signature">个性签名</string>
    <string name="type_word">输入文字</string>
    <string name="reg">注册</string>
    <string name="edittext_repassword_hint">repeat password here</string>
    <string name="edittext_username_hint">username here</string>
    <string name="edittext_realname_hint">realname here</string>
    <string name="feeback">反馈</string>
    <string name="share">分享</string>
    <string name="about">关于</string>
    <string name="modify">编辑信息</string>
    <string name="publish">发推文</string>
    <string name="feedback">反馈</string>
    <string name="submit_question">Wish you to submit problems by sending mail or @GitHub during the use of the Applcaition</string>
    <string name="github">https://github.com/gaoyuyu/EasySocial</string>
    <string name="splash">See You Again :)</string>
    <string name="none_title"/>
    <string name="change_theme">换肤</string>
    <string name="logining">登录中...</string>
    <string name="loading">加载中...</string>
    <string name="sending">正在发送...</string>
    <string name="request">请求数据中...</string>
    <string name="plugin">插件</string>
    <string name="download_install">下载并安装</string>
    <string name="download">仅下载</string>
    <string name="install">安装</string>
    <string name="delete">删除</string>


</resources>
