<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:checked="true"
            android:icon="@mipmap/ic_dashboard"
            android:title="@string/home"/>
        <item
            android:id="@+id/nav_personal"
            android:icon="@mipmap/ic_personal"
            android:title="@string/person_center"/>
        <item
            android:id="@+id/nav_setting"
            android:icon="@mipmap/ic_setting"
            android:title="@string/setting"/>
        <item
            android:id="@+id/nav_feedback"
            android:icon="@mipmap/ic_feedback"
            android:title="@string/feeback"/>
        <item
            android:id="@+id/nav_share"
            android:icon="@mipmap/ic_share_black"
            android:title="@string/share"/>
    </group>


</menu>
