<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/item_plugin_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/selector"
        android:orientation="horizontal"
        android:padding="25dp">

        <ImageView
            android:id="@+id/item_plugin_img"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@mipmap/ic_share_gray"/>

        <TextView
            android:id="@+id/item_plugin_name"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:singleLine="false"
            android:layout_below="@+id/item_plugin_img"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:text="New"
            android:textColor="@color/black"/>

    </LinearLayout>

    <com.balysv.materialripple.MaterialRippleLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:background="@color/transparent"
        app:mrl_rippleAlpha="0.2"
        app:mrl_rippleColor="@color/gray600"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/item_plugin_download"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="@drawable/selector"
                android:text="@string/download"
                android:textColor="@color/holo_blue"/>
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/item_plugin_both"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="0dp"
                android:layout_margin="5dp"
                android:layout_gravity="center"
                android:background="@drawable/selector"
                android:text="@string/download_install"
                android:textColor="@color/holo_blue"/>
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/item_plugin_install"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="0dp"
                android:layout_margin="5dp"
                android:layout_gravity="center"
                android:background="@drawable/selector"
                android:text="@string/install"
                android:textColor="@color/holo_blue"/>
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/item_plugin_delete"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="0dp"
                android:layout_margin="5dp"
                android:layout_gravity="center"
                android:background="@drawable/selector"
                android:text="@string/delete"
                android:textColor="@color/edittext_error_color"/>

        </LinearLayout>

    </com.balysv.materialripple.MaterialRippleLayout>
</RelativeLayout>



