<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray50"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    >

    <include
        android:id="@+id/modify_toolbar"
        layout="@layout/widget_toolbar"
        />

    <RelativeLayout
        android:id="@+id/modify_avatar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/item_comment_selector">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="19dp"
            android:text="@string/avatar"
            android:textColor="@color/black"
            android:textSize="16sp"/>

        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/modify_avatar"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_margin="8dp"
            />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/gray"
        />

    <RelativeLayout
        android:id="@+id/modify_username_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/item_comment_selector"
        android:paddingBottom="5dp"
        android:paddingTop="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="19dp"
            android:text="@string/nickname"
            android:textColor="@color/black"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/modify_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_margin="8dp"
            android:src="@mipmap/bg_header"
            android:text="Darkness"
            android:textSize="16sp"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/modify_gender_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/item_comment_selector"
        android:paddingBottom="5dp"
        android:paddingTop="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="19dp"
            android:text="@string/gender"
            android:textColor="@color/black"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/modify_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_margin="8dp"
            android:src="@mipmap/bg_header"
            android:text="男"
            android:textSize="16sp"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/gray"
        />

    <RelativeLayout
        android:id="@+id/modify_signature_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/item_comment_selector"
        android:paddingBottom="5dp"
        android:paddingTop="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="19dp"
            android:text="@string/signature"
            android:textColor="@color/black"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/modify_signature"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_margin="8dp"
            android:gravity="right"
            android:src="@mipmap/bg_header"
            android:text="去设置"
            android:textSize="16sp"/>
    </RelativeLayout>
</LinearLayout>
